# aiopsopendoor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-incident.md  01-architecture.md  08-decision-log.md
inputs/: facts.example.json  jd.opendoor.md
outputs/run_20260514T020756Z_09f26a/: run.json
src/applyops/: __init__.py  cli.py  facts.py  facts_parser.py  runner.py  submit.py
src/applyops/agents/: __init__.py  critic.py  factchecker.py  jd_source.py  recruiter.py  submitter.py  types.py  writer.py
src/applyops/evals/: __init__.py  fixtures.py  rubrics.py  scorers.py
src/applyops/gstack/: __init__.py  context.py  protocols.py  run.py  stack.py  types.py
src/applyops/obs/: __init__.py  tracing.py
src/applyops/render/: __init__.py  pdf.py
tests/: test_factchecker.py  test_facts.py  test_facts_parser.py  test_full_pipeline_integration.py  test_gstack.py  test_jd_source.py  test_jd_source_playwright.py  test_obs.py  test_recruiter.py  test_render_pdf.py  test_smoke.py  test_submit_playwright.py  test_submitter.py  test_writer_critic_integration.py
tests/evals/: test_facts_rubric.py  test_writer_rubrics.py
tests/evals/fixtures/: role_analysis.opendoor.json  writer_output.bad_coverage.json  writer_output.fact_overconcentrated.json  writer_output.good.json
tests/fixtures/: fake_ats_form.html  fake_ats_jd.html  jd.fake.md
