[project]
name = "applyops"
version = "0.0.1"
description = "Treat a job application as production AI Ops: stacked agents, evals, traces, runbooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sahaj" }]

dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "pypdf>=4.3",
    "markdown>=3.6",
]

[project.optional-dependencies]
obs = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "langfuse>=2.40",
]
submit = [
    "playwright>=1.45",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-markdown",
]

[project.scripts]
applyops = "applyops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applyops"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501: handled by formatter, not the linter.
# RUF001-003: typographic dashes / multiplication signs are intentional in
#   resume + cover-letter text and fixture data; flagging them is noise here.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Typer requires Argument/Option as defaults — that's the documented idiom.
"src/applyops/cli.py" = ["B008"]
# Test files use unused imports for monkeypatching and fixtures.
"tests/**/*.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src/applyops"]

[[tool.mypy.overrides]]
# These extras are optional. CI runs mypy without the `[submit]` and `[obs]`
# extras installed, so their stubs aren't present. The runtime code paths
# that touch them are guarded behind try/except ImportError already.
module = ["langfuse.*", "opentelemetry.*", "playwright.*", "markdownify"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "eval: rubric-based eval suites (may call the LLM, slower, gated in CI)",
    "live: tests that call live external services",
]
